--- a/src/ext/components/h2o.jade
+++ b/src/ext/components/h2o.jade
@@ -208,3 +208,9 @@ script(type="text/html" id="flow-file-upload-dialog")
 
 script(type="text/html" id="flow-delete-objects-output")
   include delete-objects-output.jade
+
+script(type="text/html" id="flow-export-models-to-tapad-input")
+  include export-models-to-tapad-input.jade
+
+script(type="text/html" id="flow-export-models-to-tapad-output")
+  include export-models-to-tapad-output.jade
