--- a/src/ext/components/model-output.jade
+++ b/src/ext/components/model-output.jade
@@ -38,6 +38,7 @@
               span
               | Download Model Deployment Package (MOJO)
             +button('Export', 'save', 'exportModel')
+            +button('Export to Tapad', 'cloud-upload', 'exportModelToTapad')
             +button('Inspect', 'list', 'inspect')
             +button('Delete', 'trash-o', 'deleteModel')
             +button('Download Gen Model', 'download', 'downloadGenJar')
